Fixed incorrect element overlap

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -69,6 +69,6 @@
         font-weight: 700;
         padding: 10px;
         border-radius: 10px;
-        z-index: 99999999;
+        z-index: 10;
     }
 }
